<resources>
    <string name="app_name">Madar</string>
    <string name="check_internet_connections">Check Internet Connection!</string>
    <string name="storage_permissions_title">Storage Permissions</string>
    <string name="storage_permissions_message">Sorry, in order to proceed, you need to allow the app to access external storage.</string>
    <string name="location_permissions_title">Location Permissions</string>
    <string name="location_permissions_message">Sorry, in order to proceed, you need to allow the app to access your location.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="rotate">180</string>
    <string name="do_you_need_to_close_app">Do you want to exit the application?</string>
    <string name="close">Exit</string>
    <string name="close_">Close</string>
    <string name="full_name_">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="collect_data">Collect Data</string>
    <string name="job_title">Job Title</string>
    <string name="enter_your_job_title">Enter your job title</string>
    <string name="please_enter_your_job_title">Please enter your job title</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_language">Change Language</string>
    <string name="log_out">Log Out</string>
    <string name="the_account_will_be_deleted_after_45_days_from_now">The account will be deleted after 45 days from now</string>
    <string name="delete">Delete</string>
    <string name="your_account_deletion_request_has_been_submitted_successfully">Your account deletion request has been submitted successfully</string>
    <string name="do_you_need_to_logout">Do you need to logout?</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="edit_data">Edit Data</string>
    <string name="now_you_enabled_views_and_can_edit_your_data">Now You Enabled Views And Can Edit Your Data</string>
    <string name="edited_success">Data edited successfully</string>
</resources>